fix: responsive features + no tailwind

--- a/packages/docs/pages/index.mdx
+++ b/packages/docs/pages/index.mdx
@@ -9,10 +9,10 @@ import Image from "next/image";
 import Call from "../components/Call"
 import Logo from "../components/Logo"
 
-<div style={{ display: "flex", paddingRight: 20, paddingTop: 20, flexDirection: "column", alignItems: "center"}}>
+<div style={{ display: "flex", paddingRight: 0, paddingTop: 20, flexDirection: "column", alignItems: "center"}}>
 <Logo width={120} height={120}/>
 </div>
-<h2 className="title" style={{marginTop: 0, marginBottom: 20}}>Crudel</h2>
+<h2 className="title" style={{marginTop: 0, marginBottom: 20, paddingLeft: "30px"}}>Crudel</h2>
 <Features />
 
 To fully set up a react project with data fetching and data manipulation can cost you a lot of time. You have to write your own `fetching` functions, manage your `state` and build custom `hooks`.
